SERVER-52953 $geoNear does not always match coordinate given to 'near' when maxDistance is set to 0